[package]
name = "lifx-rs"
description = "A synchronous + asynchronous library for communicating with the official LIFX-API and the unoffical offline API."
version = "0.1.30"
edition = "2018"
authors = ["Caleb Mitchell Smith-Woolrich <calebsmithwoolrich@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lifx-rs"
repository = "https://github.com/PixelCoda/lifx-rs"
readme = "README.md"

[dependencies]
serde_json = "1.0.96"
trust-dns-resolver = "0.22.0"
reqwest = { version = "0.11.17", default-features = false, features = ["blocking", "json"] }
serde_derive = "1.0.130"
byteorder = "1.4.3"
thiserror = "1.0.40"

serde = { version = "1.0.162", features = ["derive"] }

[features]
default = ["reqwest/default-tls", "trust-dns-resolver/dns-over-native-tls"]